# cpp-osx-frontmost_application_monitor

./: .swiftlint.yml  CMakeLists.txt  README.md
appendix/: PQRSOSXFrontmostApplicationMonitorImpl.swift  README.md
example/: CMakeLists.txt  Makefile  cget-requirements.txt  main.cpp  project.yml
include/pqrs/osx/: frontmost_application_monitor.hpp
include/pqrs/osx/frontmost_application_monitor/: application.hpp  monitor.hpp
include/pqrs/osx/frontmost_application_monitor/extra/: boost.hpp  nlohmann_json.hpp
include/pqrs/osx/frontmost_application_monitor/impl/: impl.h
src/: PQRSOSXFrontmostApplicationMonitorImpl.swift
src/pqrs/osx/frontmost_application_monitor/: PQRSOSXFrontmostApplicationMonitorImpl.swift  impl.swift
tests/: cget-requirements.txt
tests/src/: CMakeLists.txt  Makefile  application_test.cpp  application_test.hpp  boost_test.cpp  boost_test.hpp  monitor_test.cpp  monitor_test.hpp  nlohmann_json_test.cpp  nlohmann_json_test.hpp  project.yml  test.cpp
tests/src/test.xcodeproj/: project.pbxproj
